# vst-japlugins

./: README.md
jagain/: CMakeLists.txt  README.md
jagain/res/: editor.uidesc
jagain/src/: cids.h  controller.cpp  controller.h  entry.cpp  plugids.h  processor.cpp  processor.h  version.h
